--- a/styles/g3.css
+++ b/styles/g3.css
@@ -22,12 +22,30 @@
 .bg-light {
   background-color: rgb(255, 144, 14, 0.1);
 }
+.btn-primary {
+  background-color: #ff900e;
+  color: white;
+  padding: 20px 25px;
+  font-size: 1.25rem;
+  font-weight: 600;
+  border-radius: 8px;
+  border: none;
+}
+
+.btn-center {
+  text-align: center;
+}
 
 /*header style */
 
 /*navbar related styles */
 .navbar {
   justify-content: space-between;
+  align-items: center;
+}
+.brand {
+  font-weight: 700;
+  font-size: 45px;
 }
 
 .nav-item {
@@ -43,4 +61,26 @@
 .banner {
   max-width: 1440px;
   margin: 0 auto;
+}
+/*bannar style */
+.banner-content {
+  max-width: 850px;
+  margin: auto;
+  text-align: center;
+  margin-bottom: 50px;
+}
+.banner-title {
+  font-weight: 700;
+  font-size: 4rem;
+}
+.banner-img {
+  width: 100%;
+}
+/*responsive media query */
+
+@media screen and(max-width:576px) {
+  .navbar,
+  .nav-links {
+    flex-direction: column;
+  }
 }
