--- a/styles/g3.css
+++ b/styles/g3.css
@@ -31,6 +31,13 @@
   border-radius: 8px;
   border: none;
 }
+main{
+  max-width: 1440px;
+  margin: 0 auto;
+}
+main > section{
+  margin-top: 130px;
+}
 
 .btn-center {
   text-align: center;
@@ -75,6 +82,22 @@
 }
 .banner-img {
   width: 100%;
+}
+/*team and feature related style */
+.teams{
+  text-align: center;
+}
+.team-img-container{
+  display: grid;
+  grid-template-columns: repeat(2,1fr);
+  gap: 24px;
+}
+.our-features{
+  margin-left:130px ;
+  max-width: 530px;
+}
+.feature-title{
+font-size: 2.8rem;
 }
 /*responsive media query */
 
