--- a/styles/g3.css
+++ b/styles/g3.css
@@ -15,6 +15,9 @@
 .text-gra {
   color: #424242;
 }
+.text-primary {
+  color: #ff900e;
+}
 /*dark 03 */
 .text-light-gra {
   color: #727272;
@@ -31,11 +34,11 @@
   border-radius: 8px;
   border: none;
 }
-main{
+main {
   max-width: 1440px;
   margin: 0 auto;
 }
-main > section{
+main > section {
   margin-top: 130px;
 }
 
@@ -84,26 +87,46 @@ main > section{
   width: 100%;
 }
 /*team and feature related style */
-.teams{
-  text-align: center;
-}
-.team-img-container{
+
+.team-img-container {
   display: grid;
-  grid-template-columns: repeat(2,1fr);
+  grid-template-columns: repeat(2, 1fr);
   gap: 24px;
 }
-.our-features{
-  margin-left:130px ;
+.our-features {
+  margin-left: 130px;
   max-width: 530px;
 }
-.feature-title{
-font-size: 2.8rem;
+.section-title {
+  font-size: 2.8rem;
+  font-weight: 700;
 }
 /*responsive media query */
 
-@media screen and(max-width:576px) {
+@media screen and (max-width: 576px) {
   .navbar,
-  .nav-links {
+  .nav-links .teams {
     flex-direction: column;
+  }
+  .display-flex {
+    flex-direction: column;
+  }
+  .team-img-container {
+    display: grid;
+    grid-template-columns: repeat(1, 1fr);
+    gap: 24px;
+  }
+  .our-features {
+    margin-left: 20px;
+  }
+}
+
+/*medium size device */
+@media screen and(min-width:576px) and(max-width:992px) {
+  .teams {
+    flex-direction: column;
+  }
+  .our-features {
+    margin: 50px auto;
   }
 }
