--- a/styles/g3.css
+++ b/styles/g3.css
@@ -101,6 +101,35 @@ main > section {
   font-size: 2.8rem;
   font-weight: 700;
 }
+/*some facts related style */
+.facts-container {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+}
+.fact-card {
+  border: 1px solid #ff900e;
+  width: 240px;
+  height: 240px;
+  border-radius: 8px;
+  text-align: center;
+  align-items: center;
+  justify-content: center;
+}
+.fact-number {
+  font-size: 2.8rem;
+  font-weight: 600;
+  margin-top: 5px;
+  margin-bottom: 10px;
+}
+.fact-name {
+  font-size: 2.25rem;
+  font-weight: 600;
+  margin-top: 10px;
+}
+.fact-desciption {
+  max-width: 540px;
+}
+
 /*responsive media query */
 
 @media screen and (max-width: 576px) {
@@ -111,10 +140,19 @@ main > section {
   .display-flex {
     flex-direction: column;
   }
-  .team-img-container {
+  .team-img-container,
+  .facts-container .sponsor-companies {
     display: grid;
-    grid-template-columns: repeat(1, 1fr);
+    grid-template-columns: 1fr;
     gap: 24px;
+  }
+  .facts-container {
+    justify-items: center;
+    gap: 24px;
+  }
+  .sponsor-companies {
+    justify-items: center;
+    gap: 50px;
   }
   .our-features {
     margin-left: 20px;
@@ -129,4 +167,23 @@ main > section {
   .our-features {
     margin: 50px auto;
   }
+  .sponsor-companies,
+  .facts-container {
+    grid-template-columns: repeat(2, 1fr);
+    gap: 50px;
+    justify-items: center;
+  }
+}
+/*sponsor related styles */
+.sponsor-info {
+  max-width: 540px;
+  margin: 50 auto;
+  text-align: center;
+}
+.sponsor-companies {
+  display: grid;
+  grid-template-columns: repeat(5, 1fr);
+}
+.sponsor-companies img {
+  filter: grayscale(100);
 }
