--- a/styles/g3.css
+++ b/styles/g3.css
@@ -97,6 +97,30 @@ main > section {
   margin-left: 130px;
   max-width: 530px;
 }
+#feature-section-title {
+  border-left: 5px solid #ff900e;
+  padding-left: 20px;
+}
+.features {
+  gap: 140px;
+}
+#feature-section-title {
+  border-left: 5px solid #ff900e;
+  padding-left: 20px;
+}
+
+.feature-card {
+  padding: 30px;
+  border-radius: 8px;
+  box-shadow: 0 4px rgb(0, 0, 0, 0.06);
+  margin: 20px;
+}
+.feature-card .feature-title {
+  font-weight: 600;
+  font-size: 1.25rem;
+  margin-top: 0px;
+  margin-bottom: 0px;
+}
 .section-title {
   font-size: 2.8rem;
   font-weight: 700;
