--- a/styles/g3.css
+++ b/styles/g3.css
@@ -121,6 +121,20 @@ main > section {
   margin-top: 0px;
   margin-bottom: 0px;
 }
+#experience-badge {
+  padding: 45px 42px;
+  font-size: 1.5rem;
+  font-weight: 500;
+  margin-left: -100px;
+  margin-top: -100px;
+}
+#experience-year {
+  font-size: 4rem;
+  font-weight: 700;
+}
+.featured-architect img {
+  width: 100%;
+}
 .section-title {
   font-size: 2.8rem;
   font-weight: 700;
@@ -158,7 +172,8 @@ main > section {
 
 @media screen and (max-width: 576px) {
   .navbar,
-  .nav-links .teams {
+  .nav-links .features,
+  .teams {
     flex-direction: column;
   }
   .display-flex {
@@ -173,6 +188,7 @@ main > section {
   .facts-container {
     justify-items: center;
     gap: 24px;
+    grid-template-columns: repeat(2, 1fr);
   }
   .sponsor-companies {
     justify-items: center;
@@ -181,11 +197,16 @@ main > section {
   .our-features {
     margin-left: 20px;
   }
+  #experience-badge {
+    margin-top: 20px;
+    margin-left: 20px;
+  }
 }
 
 /*medium size device */
 @media screen and(min-width:576px) and(max-width:992px) {
-  .teams {
+  .teams,
+  .feature-card {
     flex-direction: column;
   }
   .our-features {
@@ -196,6 +217,10 @@ main > section {
     grid-template-columns: repeat(2, 1fr);
     gap: 50px;
     justify-items: center;
+  }
+  #experience-badge {
+    margin-top: 20px;
+    margin-left: 20px;
   }
 }
 /*sponsor related styles */
