--- a/styles/g3.css
+++ b/styles/g3.css
@@ -167,6 +167,15 @@ main > section {
 .fact-desciption {
   max-width: 540px;
 }
+.footer {
+  font-size: 20px;
+  font-weight: 400;
+  background-color: #fff4e7;
+  color: #424242;
+  text-align: center;
+  padding: 39px;
+  margin-top: 104px;
+}
 
 /*responsive media query */
 
